// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image Component > props.fit is equal to contain 1`] = `
<img
  alt=""
  class="t-image t-image--fit-contain t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to cover 1`] = `
<img
  alt=""
  class="t-image t-image--fit-cover t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to fill 1`] = `
<img
  alt=""
  class="t-image t-image--fit-fill t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to none 1`] = `
<img
  alt=""
  class="t-image t-image--fit-none t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.fit is equal to scale-down 1`] = `
<img
  alt=""
  class="t-image t-image--fit-scale-down t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`Image Component > props.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > props.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</div>
`;

exports[`Image Component > props.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > slots.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Image Component > slots.overlay-content works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`Image Component > slots.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`Image Component > slots.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`image Component > props.fit is equal to contain 1`] = `
<img
  alt=""
  class="t-image t-image--fit-contain t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`image Component > props.fit is equal to cover 1`] = `
<img
  alt=""
  class="t-image t-image--fit-cover t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`image Component > props.fit is equal to fill 1`] = `
<img
  alt=""
  class="t-image t-image--fit-fill t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`image Component > props.fit is equal to none 1`] = `
<img
  alt=""
  class="t-image t-image--fit-none t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`image Component > props.fit is equal to scale-down 1`] = `
<img
  alt=""
  class="t-image t-image--fit-scale-down t-image--position-center"
  referrerpolicy="strict-origin-when-cross-origin"
  src=""
/>
`;

exports[`image Component > props.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`image Component > props.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</div>
`;

exports[`image Component > props.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`image Component > slots.loading works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
</div>
`;

exports[`image Component > slots.overlay-content works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`image Component > slots.overlayContent works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <!---->
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <div
    class="t-image__overlay-content"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`image Component > slots.placeholder works fine 1`] = `
<div
  class="t-image__wrapper t-image__wrapper--shape-square"
  fallback=""
  referrerpolicy="strict-origin-when-cross-origin"
>
  <div
    class="t-image__placeholder"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
  <!---->
  <!---->
  <img
    alt=""
    class="t-image t-image--fit-fill t-image--position-center"
    referrerpolicy="strict-origin-when-cross-origin"
    src=""
  />
  <div
    class="t-image__loading"
  >
    <div
      class="t-space t-space-align-center t-space-vertical"
      style="gap: 8px;"
    >
      
      
      <div
        class="t-space-item"
      >
        <svg
          class="t-icon t-icon-image"
          fill="none"
          height="1em"
          style="font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 2h20v20H2V2zm2 18h13.59L9 11.41l-5 5V20zm16-.41V4H4v9.59l5-5 11 11zM15.55 7a1 1 0 100 2 1 1 0 000-2zm-3 1a3 3 0 116 0 3 3 0 01-6 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <!---->
      
      
      <div
        class="t-space-item"
      >
        图片加载中
      </div>
      <!---->
      
      
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
